--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ Naming/UncommunicativeMethodParamName:
 Naming/FileName:
   Exclude:
     - 'lib/sheep-a-changelog.rb'
+    - 'spec/sheep-a-changelog_spec.rb'
 
 Metrics/BlockLength:
   Exclude:
